# Programming_project---B2-9b

devel/lib/brain/: center  center_programming
devel/lib/image/: image_reader  image_reader_programming
src/brain/: CMakeLists.txt
src/brain/src/: center.cpp  center_programming.cpp
src/image/: CMakeLists.txt
src/image/src/: image_reader.cpp  image_reader_programming.cpp
